--- a/index.html
+++ b/index.html
@@ -37,7 +37,22 @@
         </section>
         <section class="content">
             <div class="container">
-            
+                <div class="content__box">
+                    <div class="content__main">
+                        <h2 class="content__main__title">Результаты поиска</h2>
+                        <div class="content__cards">
+                            <div class="content__cards__item">1</div>
+                            <div class="content__cards__item">2</div>
+                            <div class="content__cards__item">3</div>
+                            <div class="content__cards__item">4</div>
+                            <div class="content__cards__item">5</div>
+                            <div class="content__cards__item">6</div>
+                        </div>
+                    </div>
+                    <div class="content__sidebar">
+    
+                    </div>
+                </div>
             </div>
         </section>
     </main>
