--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="content__main">
                         <h2 class="content__main__title">Результаты поиска</h2>
                         <div class="content__cards">
-                            <div class="content__cards__item">
+                            <a href="./movie.html" class="content__cards__item">
                                 <div class="content__cards__item__img">
                                     <img src="./img/movie.png" alt="Карточка фильма">
                                 </div>
@@ -52,8 +52,8 @@
                                 </div>
                                 <p class="content__cards__item__description">Фантастика, приключения</p>
                                 <p class="content__cards__item__pating">7.8</p>
-                            </div>
-                            <div class="content__cards__item">
+                            </a>
+                            <a href="./movie.html" class="content__cards__item">
                                 <div class="content__cards__item__img">
                                     <img src="./img/movie.png" alt="Карточка фильма">
                                 </div>
@@ -63,8 +63,8 @@
                                 </div>
                                 <p class="content__cards__item__description">Фантастика, приключения</p>
                                 <p class="content__cards__item__pating">7.8</p>
-                            </div>
-                            <div class="content__cards__item">
+                            </a>
+                            <a href="./movie.html" class="content__cards__item">
                                 <div class="content__cards__item__img">
                                     <img src="./img/movie.png" alt="Карточка фильма">
                                 </div>
@@ -74,8 +74,8 @@
                                 </div>
                                 <p class="content__cards__item__description">Фантастика, приключения</p>
                                 <p class="content__cards__item__pating">7.8</p>
-                            </div>
-                            <div class="content__cards__item">
+                            </a>
+                            <a href="./movie.html" class="content__cards__item">
                                 <div class="content__cards__item__img">
                                     <img src="./img/movie.png" alt="Карточка фильма">
                                 </div>
@@ -85,8 +85,8 @@
                                 </div>
                                 <p class="content__cards__item__description">Фантастика, приключения</p>
                                 <p class="content__cards__item__pating">7.8</p>
-                            </div>
-                            <div class="content__cards__item">
+                            </a>
+                            <a href="./movie.html" class="content__cards__item">
                                 <div class="content__cards__item__img">
                                     <img src="./img/movie.png" alt="Карточка фильма">
                                 </div>
@@ -96,8 +96,8 @@
                                 </div>
                                 <p class="content__cards__item__description">Фантастика, приключения</p>
                                 <p class="content__cards__item__pating">7.8</p>
-                            </div>
-                            <div class="content__cards__item">
+                            </a>
+                            <a href="./movie.html" class="content__cards__item">
                                 <div class="content__cards__item__img">
                                     <img src="./img/movie.png" alt="Карточка фильма">
                                 </div>
@@ -107,7 +107,7 @@
                                 </div>
                                 <p class="content__cards__item__description">Фантастика, приключения</p>
                                 <p class="content__cards__item__pating">7.8</p>
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="content__sidebar">
