--- a/movie.html
+++ b/movie.html
@@ -39,74 +39,26 @@
         <section class="content">
             <div class="container">
                 <div class="content__box">
-                    <div class="content__main">
-                        <h2 class="content__main__title">Результаты поиска</h2>
-                        <div class="content__cards">
-                            <div class="content__cards__item">
-                                <div class="content__cards__item__img">
-                                    <img src="./img/movie.png" alt="Карточка фильма">
+                    <div class="content__movie">
+                        <div class="content__movie__img">
+                            <img src="./img/movie.png" alt="Марсианин">
+                        </div>
+                        <div class="content__movie__info">
+                            <div class="content__movie__info__content">
+                                <div class="content__movie__info__title">
+                                    <h1>Марсианин,</h1>
+                                    <p>The Martian 2015</p>
                                 </div>
-                                <div class="content__cards__item__title">
-                                    <h4>Марсианин,</h4>
-                                    <span>The Martian 2015</span>
-                                </div>
-                                <p class="content__cards__item__description">Фантастика, приключения</p>
-                                <p class="content__cards__item__pating">7.8</p>
+                                <p class="content__movie__info__description">Фантастика, приключения</p>
+                                <p class="content__movie__info__rating">7.8</p>
+                                <p class="content__movie__info__text">
+                                    Марсианская миссия «Арес-3» в процессе работы была вынуждена экстренно покинуть планету из-за надвигающейся песчаной бури. Инженер и биолог Марк Уотни получил повреждение скафандра во время песчаной бури. Сотрудники миссии, посчитав его погибшим, эвакуировались с планеты, оставив Марка одного.
+                                </p>
+                                <p class="content__movie__info__text">Очнувшись, Уотни обнаруживает, что связь с Землёй отсутствует, но при этом полностью функционирует жилой модуль. Главный герой начинает искать способ продержаться на имеющихся запасах еды, витаминов, воды и воздуха ещё 4 года до прилёта следующей миссии «Арес-4». 
+                                </p>
                             </div>
-                            <div class="content__cards__item">
-                                <div class="content__cards__item__img">
-                                    <img src="./img/movie.png" alt="Карточка фильма">
-                                </div>
-                                <div class="content__cards__item__title">
-                                    <h4>Марсианин,</h4>
-                                    <span>The Martian 2015</span>
-                                </div>
-                                <p class="content__cards__item__description">Фантастика, приключения</p>
-                                <p class="content__cards__item__pating">7.8</p>
-                            </div>
-                            <div class="content__cards__item">
-                                <div class="content__cards__item__img">
-                                    <img src="./img/movie.png" alt="Карточка фильма">
-                                </div>
-                                <div class="content__cards__item__title">
-                                    <h4>Марсианин,</h4>
-                                    <span>The Martian 2015</span>
-                                </div>
-                                <p class="content__cards__item__description">Фантастика, приключения</p>
-                                <p class="content__cards__item__pating">7.8</p>
-                            </div>
-                            <div class="content__cards__item">
-                                <div class="content__cards__item__img">
-                                    <img src="./img/movie.png" alt="Карточка фильма">
-                                </div>
-                                <div class="content__cards__item__title">
-                                    <h4>Марсианин,</h4>
-                                    <span>The Martian 2015</span>
-                                </div>
-                                <p class="content__cards__item__description">Фантастика, приключения</p>
-                                <p class="content__cards__item__pating">7.8</p>
-                            </div>
-                            <div class="content__cards__item">
-                                <div class="content__cards__item__img">
-                                    <img src="./img/movie.png" alt="Карточка фильма">
-                                </div>
-                                <div class="content__cards__item__title">
-                                    <h4>Марсианин,</h4>
-                                    <span>The Martian 2015</span>
-                                </div>
-                                <p class="content__cards__item__description">Фантастика, приключения</p>
-                                <p class="content__cards__item__pating">7.8</p>
-                            </div>
-                            <div class="content__cards__item">
-                                <div class="content__cards__item__img">
-                                    <img src="./img/movie.png" alt="Карточка фильма">
-                                </div>
-                                <div class="content__cards__item__title">
-                                    <h4>Марсианин,</h4>
-                                    <span>The Martian 2015</span>
-                                </div>
-                                <p class="content__cards__item__description">Фантастика, приключения</p>
-                                <p class="content__cards__item__pating">7.8</p>
+                            <div class="content__movie__info__controls">
+                                <button>Смотреть</button>
                             </div>
                         </div>
                     </div>
