--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <section class="search">
             <div class="container">
                 <div class="search__box">
-                    <input type="text" placeholder="Что хотите посмотреть?">
-                    <button>
+                    <input id="search-input" type="text" placeholder="Что хотите посмотреть?">
+                    <button id="search-button">
                         <img src="./img/search.svg" alt="Поиск">
                         <span>Найти</span>
                     </button>
